--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,26 +1,23 @@
 name: CI/CD Pipeline
-
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
         distribution: 'adopt'
+        cache: maven
 
     - name: Cache Maven packages
       uses: actions/cache@v2
@@ -38,11 +35,12 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn sonar:sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-    - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-    - name: Build Docker image
-      run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/prs:latest
-
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/prs:latest
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: ${{ secrets.DOCKER_TOKEN }}/prs
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
