--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Build with Maven
+      run: mvn clean install
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -25,5 +34,6 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
+        context: .
         push: true
         tags: docker.io/${{ secrets.DOCKER_USERNAME }}/prs:latest
